# tasker-bot

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.py
.github/workflows/: deploy.yml  python-checks.yaml  test_workflow.yaml
.gitverse/workflows/: checks-python.yaml
alembic/: env.py
alembic/versions/: 0d9f20e47205_create_tasks_table.py  645e857f25c1_create_user_settings_table.py  a021453792ec_initial_migration.py  bec76780fc8b_update_character_limits.py  d7c687429f2d_add_new_field_to_users_table.py
app/: __init__.py  handlers.py  handlers_test.py  keyboards.py  rabbit_tasks.py  scheduler.py  statesuser.py  utils.py
app/bot/: context.py
app/bot/middlewares/: user_init.py
app/core/database/crud/: __init__.py  crud_manager.py
app/core/database/crud/managers/: __init__.py  session_manager.py  user.py
app/core/database/crud/repositories/: __init__.py  base.py  user.py
bot-app/: .env.template  alembic.ini  config.default.yaml  manage.bat  run.py  webhook.py
bot-app/alembic/: env.py
bot-app/alembic/versions/: 0d9f20e47205_create_tasks_table.py  11a44a5d5ba5_add_field_to_user_settings_table.py  645e857f25c1_create_user_settings_table.py  a021453792ec_initial_migration.py  bec76780fc8b_update_character_limits.py  d7c687429f2d_add_new_field_to_users_table.py  d92737062729_update_field_send_time_in_usersettings.py  f3d1be46587b_add_new_field_to_usersettings.py
bot-app/app_exceptions/: exceptions.py
bot-app/bot/: __init__.py  dependencies.py  handlers.py  keyboards.py  middlewares.py  rabbit_service.py  rabbit_tasks.py  scheduler.py  schemas.py  statesuser.py  utils.py
bot-app/bot/handler_filtres/: __init__.py  callback_filter.py  user_filter.py
bot-app/bot/handlers/: __init__.py  affirmations.py  owner.py  start_handler.py  user_settings.py
bot-app/commands/: cli.py  coro.py  crud.py
bot-app/config/: __init__.py  bot.py  config.py  database.py  rabbitmq.py  run.py
bot-app/crud/: crud_service.py
bot-app/crud/managers/: __init__.py  affirmations.py  base.py  users.py
bot-app/crud/services/: affirmations.py  users.py
bot-app/database/: __init__.py  config.py  db_helper.py  models.py  requests.py
bot-app/database/crud/: __init__.py  crud_manager.py
bot-app/database/crud/managers/: __init__.py  base.py  task.py  user.py
bot-app/database/schemas/: __init__.py  task.py  user.py
bot-app/rabbit_service/: affirmations.py  broker.py  dispatcher.py
bot-app/rabbit_service/handlers/: affirmations.py  base.py  user_settings.py
bot-app/rabbit_service/schemas/: commands.py  queries.py  results.py
bot-app/run_config/: __init__.py  bot.py  fastapi_lifespan.py  run_bot.py  webhook.py
bot-app/schemas/: affirmations.py  users.py
bot-app/testing/: conftest.py
bot-app/testing/test_app/: test_handlers.py
bot-app/testing/test_config/: test_config.py
bot-app/testing/test_database/: test_db_helper.py  test_models.py
bot-app/testing/test_database/test_crud/test_managers/: test_base_crud_manager.py  test_task_manager.py  test_user_manager.py
config/: __init__.py  config.py
database/: __init__.py  config.py  db_helper.py  models.py  requests.py
database/crud/: __init__.py  crud_manager.py
database/crud/managers/: __init__.py  base.py  task.py  user.py
database/schemas/: __init__.py  task.py  user.py
testing/: conftest.py
testing/test_database/test_crud/test_managers/: test_user_manager.py
tests/: conftest.py
tests/test_app/: test_handlers.py
tests/test_config/: test_config.py
tests/test_database/: conftest.py  test_db_helper.py  test_models.py
tests/test_database/test_crud/test_managers/: test_base_crud_manager.py  test_task_manager.py  test_user_manager.py
