[project]
name = "tasker-bot"
version = "0.1.0"
description = "Telegram bot for my projects"
authors = [
    {name = "mks_min",email = "mininname@vk.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"

[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
aio-pika = "^9.5.5"
aiogram = "^3.20.0.post0"
aiohttp = "^3.11.18"
alembic = "^1.15.2"
asyncpg = "^0.30.0"
pydantic = "^2.11.4"
pydantic-settings = "^2.9.1"
sqlalchemy = "^2.0.40"
apscheduler = "^3.11.0"
faststream = {extras = ["rabbit"], version = "^0.5.47"}

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.15.0"


[tool.poetry.group.tests.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
coverage = "^7.9.2"
aiosqlite = "^0.21.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

